# GomokuRobot

./: .gitignore  CMakeLists.txt  config.hpp  logger.hpp  main.cpp
ai/: gomokuai.cpp  gomokuai.hpp
hid/: hid.cpp  hid.hpp
opencv/: chessboard.cpp  opencv.cpp  opencv.hpp
